Proje CRUD işlemleri

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,9 +29,11 @@ dist.jar=${dist.dir}/SporSalonuOtomasyonu.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.postgresql-42.2.1.jar=D:\\ortak \u00f6\u011frenci payla\u015f\u0131m\u0131\\Postgre SQL\\postgresql-42.2.1.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.postgresql-42.2.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
