--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,8 @@ file.reference.postgresql-42.2.1.jar=D:\\ortak \u00f6\u011frenci payla\u015f\u01
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.postgresql-42.2.1.jar}
+    ${file.reference.postgresql-42.2.1.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
